# noxl

./: .clocignore  .gitignore  AGENTS.md  GIT_HISTORY.md  README.md  __init__.py  _compat.py  main.py  noctics_bundle.spec  noxl.py  package-lock.json  pyproject.toml  readme.md  requirements.txt  sessions.py
central/: __init__.py  colors.py  config.py  connector.py  persona.py  runtime_identity.py  system_info.py  transport.py  version.py
central/cli/: __init__.py  app.py  args.py  dev.py  simple.py
central/commands/: __init__.py  completion.py  help_cmd.py  instrument.py  sessions.py
central/core/: __init__.py  client.py  (+3 more)
config/: central.example.json
docs/: CLI.md  INSTRUMENTS.md  PERSONA.md  SESSIONS.md
interfaces/: __init__.py  dev_identity.py  dotenv.py  paths.py  pii.py  session_logger.py
noxl/: .gitignore  __init__.py  __main__.py  cli.py  sessions.py
scripts/: bootstrap.py  build_self_improve_dataset.py  nox.run  run_central_self_loop.py  self_improve_data.py  self_loop_runner.py
tests/: conftest.py  test_anthropic_instrument.py  test_archive_early.py  test_cli_identity.py  test_cli_think_display.py  test_core_connector.py  test_core_describe_target.py  test_core_json_format.py  test_core_sanitization.py  test_core_title.py  test_day_aggregate.py  test_dev_identity.py  test_dev_passphrase.py  test_instrument_anonymization.py  test_instrument_prompt.py  test_instrument_routing.py  test_persona.py  test_reasoning_instrument.py  test_session_cleanup.py  test_session_logger.py  test_sessions_display.py  test_strip_reasoning.py  test_transport.py
